--- a/app/src/main/res/layout/item_list_mark.xml
+++ b/app/src/main/res/layout/item_list_mark.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/cardview_light_background">
+    android:layout_marginTop="8dp"
+    android:background="@color/design_default_color_primary"
+    android:paddingBottom="8sp">
 
     <TextView
         android:id="@+id/title_item"
@@ -25,6 +27,7 @@
         android:layout_marginStart="8dp"
         android:text="@string/annotation"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/delete_mark"
         app:layout_constraintTop_toBottomOf="@id/title_item"/>
     <TextView
         android:id="@+id/longitude_mark"
@@ -34,7 +37,6 @@
         android:layout_marginStart="8dp"
         android:text="@string/longitude"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@id/annotation_mark"/>
     <TextView
         android:id="@+id/latitude_mark"
@@ -43,15 +45,15 @@
         android:paddingTop="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/latitude"
-        app:layout_constraintTop_toBottomOf="@id/annotation_mark"
-        app:layout_constraintStart_toEndOf="@id/longitude_mark"/>
+        app:layout_constraintTop_toBottomOf="@id/longitude_mark"
+        app:layout_constraintStart_toStartOf="parent"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/delete_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/title_item"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_baseline_delete_forever_24"
         android:contentDescription="@string/delete_mark" />
