--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,11 +15,20 @@
         android:id="@+id/navigation_dashboard"
         android:name="com.edurda77.geolocation.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_dashboard_to_markFragment"
+            app:destination="@id/markFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.edurda77.geolocation.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/markFragment"
+        android:name="com.edurda77.geolocation.ui.mark.MarkFragment"
+        android:label="fragment_mark"
+        tools:layout="@layout/fragment_mark" />
 </navigation>
